--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,10 @@
           }
         ],
         "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": ["error"]
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "@typescript-eslint/no-unused-vars": [
+          "error"
+        ]
     },
     "settings": {
       "import/resolver": {
